--- a/index.html
+++ b/index.html
@@ -1,11 +1,95 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Мой сайт</title>
+  <title>VOIDHACK V0.0.2 | UKRAINE GTA Cheat</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
+      height: 100%;
+      background: url('ragebg.png') no-repeat center center fixed;
+      background-size: cover;
+    }
+
+    .overlay {
+      background-color: rgba(0, 0, 0, 0.6);
+      height: 100%;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .container {
+      text-align: center;
+      max-width: 600px;
+      padding: 40px;
+      border-radius: 20px;
+      background-color: rgba(20, 20, 20, 0.75);
+      box-shadow: 0 0 25px rgba(255, 0, 255, 0.4);
+      animation: fadeIn 1.2s ease;
+    }
+
+    h1 {
+      font-size: 32px;
+      margin-bottom: 20px;
+      color: #f0f0f0;
+      text-shadow: 0 0 8px #ff00ff;
+    }
+
+    .btn {
+      display: block;
+      width: 100%;
+      margin: 10px auto;
+      padding: 14px 20px;
+      font-size: 16px;
+      background: linear-gradient(to right, #ff00ff, #9900ff);
+      color: white;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: 0.3s;
+      text-decoration: none;
+    }
+
+    .btn:hover {
+      background: linear-gradient(to right, #9900ff, #ff00ff);
+      transform: scale(1.05);
+    }
+
+    .public-link {
+      margin-top: 20px;
+      font-size: 14px;
+      opacity: 0.8;
+    }
+
+    .public-link a {
+      color: #aaaaff;
+      text-decoration: underline;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
 <body>
-  <h1>Привет, GitHub Pages!</h1>
+  <div class="overlay">
+    <div class="container">
+      <h1>Cheat VOIDHACK V0.0.2</h1>
+      <p>для UKRAINE GTA</p>
+
+      <a class="btn" href="https://t.me/RageFamQ_bot" target="_blank">💬 Поддержка в Telegram</a>
+      <a class="btn" href="https://boosty.to/ragefamq" target="_blank">🔑 Купить ключ на Boosty</a>
+
+      <div class="public-link">
+        Наш паблик: <a href="https://t.me/ragefamqhack" target="_blank">@ragefamqhack</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
-
