--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>VOIDHACK V0.0.2 | UKRAINE GTA Cheat</title>
+  <meta charset="UTF-8" />
+  <title>VOIDHACK V0.0.2 | Cheat</title>
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
+      margin: 0; padding: 0;
       font-family: 'Segoe UI', sans-serif;
       color: white;
       height: 100%;
       background: url('ragebg.png') no-repeat center center fixed;
       background-size: cover;
     }
-
     .overlay {
       background-color: rgba(0, 0, 0, 0.6);
       height: 100%;
@@ -22,28 +20,27 @@
       align-items: center;
       justify-content: center;
     }
-
     .container {
-      text-align: center;
-      max-width: 600px;
-      padding: 40px;
-      border-radius: 20px;
       background-color: rgba(20, 20, 20, 0.75);
       box-shadow: 0 0 25px rgba(255, 0, 255, 0.4);
+      border-radius: 20px;
+      width: 400px;
+      height: 400px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      text-align: center;
       animation: fadeIn 1.2s ease;
     }
-
     h1 {
+      margin: 0;
       font-size: 32px;
-      margin-bottom: 20px;
-      color: #f0f0f0;
       text-shadow: 0 0 8px #ff00ff;
     }
-
     .btn {
-      display: block;
-      width: 100%;
-      margin: 10px auto;
+      width: 80%;
       padding: 14px 20px;
       font-size: 16px;
       background: linear-gradient(to right, #ff00ff, #9900ff);
@@ -53,27 +50,25 @@
       cursor: pointer;
       transition: 0.3s;
       text-decoration: none;
+      display: inline-block;
+      user-select: none;
     }
-
     .btn:hover {
       background: linear-gradient(to right, #9900ff, #ff00ff);
       transform: scale(1.05);
     }
-
-    .public-link {
-      margin-top: 20px;
-      font-size: 14px;
-      opacity: 0.8;
-    }
-
-    .public-link a {
-      color: #aaaaff;
-      text-decoration: underline;
-    }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-20px); }
       to { opacity: 1; transform: translateY(0); }
+    }
+    .public-link {
+      font-size: 14px;
+      opacity: 0.8;
+      margin-top: 15px;
+    }
+    .public-link a {
+      color: #aaaaff;
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -81,11 +76,11 @@
   <div class="overlay">
     <div class="container">
       <h1>Cheat VOIDHACK V0.0.2</h1>
-      <p>для UKRAINE GTA</p>
-
+      
+      <a class="btn" href="https://github.com/artem4589-me/VoidHack/raw/main/VoidHack.exe" download target="_blank">⬇️ Скачать</a>
       <a class="btn" href="https://t.me/RageFamQ_bot" target="_blank">💬 Поддержка в Telegram</a>
       <a class="btn" href="https://boosty.to/ragefamq" target="_blank">🔑 Купить ключ на Boosty</a>
-
+      
       <div class="public-link">
         Наш паблик: <a href="https://t.me/ragefamqhack" target="_blank">@ragefamqhack</a>
       </div>
