--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="container">
       <h1>Cheat VOIDHACK V0.0.3</h1>
       
-      <a class="btn" href="https://github.com/artem4589-me/VoidHack/raw/main/VoidHack.exe" download target="_blank">⬇️ Скачать</a>
+      <a class="btn" href="https://VoidHack.b-cdn.net/VoidHack.exe" download target="_blank">⬇️ Скачать</a>
       <a class="btn" href="https://t.me/RageFamQ_bot" target="_blank">💬 Поддержка в Telegram</a>
       <a class="btn" href="https://boosty.to/ragefamq" target="_blank">🔑 Купить ключ на Boosty</a>
       
