--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       
       <a class="btn" href="https://VoidHack.b-cdn.net/VoidHack.exe" download target="_blank">⬇️ Завантажити</a>
       <a class="btn" href="https://t.me/RageFamQ_bot" target="_blank">💬 Тех.Підтримка в Telegram</a>
-      <a class="btn" href="https://boosty.to/ragefamq" target="_blank">🔑 Придбати ключ на Patreon</a>
+      <a class="btn" href="https://www.patreon.com/artemByMe/membership" target="_blank">🔑 Придбати ключ на Patreon</a>
       
       <div class="public-link">
         Наш паблик: <a href="https://t.me/ragefamqhack" target="_blank">@ragefamqhack</a>
