--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="container">
       <h1>Cheat VOIDHACK V0.0.5</h1>
       
-      <a class="btn" href="https://VoidHack.b-cdn.net/ROBLOX%20CHEAT.zip" download target="_blank">⬇️ Завантажити</a>
+      <a class="btn" href="https://drive.google.com/uc?export=download&id=1Q53o4VX62RaS8taolRjqPu6NZkcadbWC" download target="_blank">⬇️ Завантажити</a>
       <a class="btn" href="https://t.me/RageFamQ_bot" target="_blank">💬 Тех.Підтримка в Telegram</a>
       <a class="btn" href="https://www.patreon.com/artemByMe/membership" target="_blank">🔑 Придбати ключ на Patreon</a>
       
